# tldir

./: Cargo.toml  README.md  devbox.json
src/: chunking.rs  cli.rs  main.rs
src/commands/: ask.rs  scan.rs
src/models/: db.rs  embeddings.rs  inference.rs  mod.rs  store.rs  summarizer.rs  text_splitter.rs
tests/: chunking_tests.rs  db_tests.rs  embedding_tests.rs  integration_tests.rs
