[package]
name = "tldir"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Core dependencies from vendor
candle-core = { path = "./vendor/candle/candle-core" }
mistral-rs = { path = "./vendor/mistral.rs" }
text-splitter = { path = "./vendor/text-splitter" }

# Database and embeddings
chroma-db = { path = "./vendor/chroma" }
fastembed-rs = "0.1"  # You'll need to add this from crates.io
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
