[package]
name = "tldir"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
candle = { package = "candle-core", version = "0.3" }
candle-nn = "0.3"
candle-transformers = "0.3"
tokenizers = "0.15"
hf-hub = "0.3"
fastembed-rs = "0.1"
rusqlite = { version = "0.30", features = ["bundled"] }
